backend-deployment.yaml
# backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: betechnet-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: betechnet-backend
  template:
    metadata:
      labels:
        app: betechnet-backend
    spec:
      containers:
        - name: betechnet-backend
          image: betechinc/betech-app-deployment_betechnet-backend:v1.1
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: betechnet-backend
spec:
  selector:
    app: betechnet-backend
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
