postgres-temp-deployment.yaml
# postgres-deployment-temp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: betechnet-postgres-temp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: betechnet-postgres-temp
  template:
    metadata:
      labels:
        app: betechnet-postgres-temp
    spec:
      automountServiceAccountToken: false
      containers:
        - name: betechnet-postgres
          image: 374965156099.dkr.ecr.us-west-2.amazonaws.com/betech-postgres:latest
          ports:
            - containerPort: 5432
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
              ephemeral-storage: "1Gi"
            limits:
              memory: "1Gi"
              cpu: "500m"
              ephemeral-storage: "2Gi"
---
apiVersion: v1
kind: Service
metadata:
  name: betechnet-postgres-temp
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: betechnet-postgres-temp
